- Refactor: Remove deprecated methods from ITreasuryPlatformDependentServices [#qubIT-Fenix-7855]

12.18.0 (12-01-2026)
- Refactor: Refactor PersonCustomer#mergeWithPerson to not depend on a PersonCustomer instance [#qubIT-Fenix-7870]

12.17.2 (06-01-2026)
- Refactor: Replace ITreasuryPlatformDependentServices#versioning* methods by static FenixEDUTreasuryPlatformDependentServices#getVersioning* [#qubIT-Fenix-7855]
- Refactor: Replace ITreasuryPlatformDependentServices#bundle invocations by Bennu BundleUtil [#qubIT-Fenix-7855]

12.17.1 (12-12-2025)
- Refactor: Remove or change invocation calls of some methods of ITreasuryPlatformDependentServices [#qubIT-Fenix-7855]
- Bug Fix: Add configuration.properties to src/test/resources to register the defaultLocale and supportedLocales in tests [#qubIT-Fenix-7855]

12.17.0 (10-12-2025)
- Refactor: Remove references of TreasuryBridgeAPIFactory [#qubIT-Fenix-6552]
- Refactor: Remove references of AcademicTreasuryPlataformDependentServicesFactory [[#qubIT-Fenix-6593]
- Refactor: Delete methods in ITreasuryBridgeAPI implementation [#qubIT-Fenix-6552]
- Refactor: Remove deprecated IImprovementTreasuryEvent [#qubIT-Fenix-6552]

12.16.0 (05-12-2025)
- Refactor: Remove methods from ITreasuryBridgeAPI implementation [#qubIT-Fenix-6552]
- Refactor: Declare static method in PersonCustomer to create customer if missing [#qubIT-Fenix-6552]

12.15.0 (05-12-2025)
- Refactor: Move and replace ITreasuryBridgeAPI#getAllAcademicTreasuryEventsList to AcademicTreasuryEvent [#qubIT-Fenix-6552]

12.14.0 (04-12-2025)
- Refactor: Move and replace ITreasuryBridgeAPI#createSaftDefaultPhysicalAddress to PersonCustomer [#qubIT-Fenix-6552]

12.13.1 (26-11-2025)
- Refactor: Move some properties and methods from ITreasuryBridgeAPI [#qubIT-Fenix-6552]

12.13.0 (25-11-2025)
- Refactor: Change static variable SPREADHSEET_HEADERS of the various report beans, to not evaluate when the classes are loaded [#qubIT-Fenix-7789]

12.12.0 (15-11-2025)